--- a/frontend/src/common/styles.scss
+++ b/frontend/src/common/styles.scss
@@ -22,3 +22,20 @@ $text-color: #5a5f59;
 .btn:hover {
   background-color: $primary-hover-color;
 }
+
+@mixin laptop {
+  @media only screen and (max-width: 1200px) {
+    @content;
+  }
+}
+
+@mixin ipad {
+  @media only screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin mobile {
+  @media only screen and (max-width: 480px) {
+    @content;
+  }
+}
