--- a/frontend/src/common/styles.scss
+++ b/frontend/src/common/styles.scss
@@ -8,6 +8,7 @@ $optimal-color: #28a745;
 $text-color: #5a5f59;
 
 .btn {
+  cursor: pointer;
   background-color: $primary-color;
   color: #ffffff !important;
   padding: {
@@ -17,10 +18,14 @@ $text-color: #5a5f59;
     bottom: 1rem;
   }
   border-radius: 5px;
+  border: none;
+  transition: all 0.4s ease;
 }
 
-.btn:hover {
+.btn:hover,
+.btn:focus {
   background-color: $primary-hover-color;
+  outline: none;
 }
 
 @mixin laptop {
