--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -6,5 +6,9 @@
   padding: 0;
   font-size: 10px;
   font-family: "Montserrat", sans-serif;
+  background-color: inherit;
+}
+
+body {
   background-color: $secondary-color;
 }
