Added a profile page component: 07-10-2023

--- a/frontend/src/common/styles.scss
+++ b/frontend/src/common/styles.scss
@@ -7,6 +7,13 @@ $low-color: #ffc107;
 $optimal-color: #28a745;
 $text-color: #5a5f59;
 
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 85vh;
+}
+
 .btn:not([disabled]),
 .btn[disabled] {
   padding: {
