--- a/frontend/src/components/Account/Profile/profileComponent.module.scss
+++ b/frontend/src/components/Account/Profile/profileComponent.module.scss
@@ -19,6 +19,7 @@
   h2 {
     font-size: 2.4rem;
     color: $text-color;
+    letter-spacing: 1px;
   }
   .edit-btn {
     padding: 0.75rem 2rem !important;
