--- a/frontend/src/components/Account/Profile/profileComponent.module.scss
+++ b/frontend/src/components/Account/Profile/profileComponent.module.scss
@@ -1,6 +1,7 @@
 @import "../../../common/styles.scss";
 
-.display {
+.display,
+.edit {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -19,6 +20,7 @@
   h2 {
     font-size: 2.4rem;
     color: $text-color;
+    letter-spacing: 1px;
   }
   .edit-btn {
     padding: 0.75rem 2rem !important;
@@ -44,6 +46,38 @@
     p:nth-child(1) {
       width: 20%;
       font-weight: 600;
+    }
+  }
+}
+
+.edit {
+  h2 {
+    margin-bottom: 1.4rem;
+  }
+  form {
+    display: flex;
+    column-gap: 10%;
+    width: 100%;
+    flex-wrap: wrap;
+    div {
+      min-width: 45%;
+      max-width: 45%;
+    }
+    .btn-container {
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+      min-width: 100%;
+    }
+    .btn-ghost {
+      cursor: pointer;
+      padding: 1rem;
+      background: #c4c4c4;
+      border-radius: 5px;
+      border: 0;
+      font-size: 1.8rem;
+      font-weight: 600;
+      color: $text-color;
     }
   }
 }
