--- a/frontend/src/components/Account/Profile/profileComponent.module.scss
+++ b/frontend/src/components/Account/Profile/profileComponent.module.scss
@@ -10,6 +10,21 @@
   height: 100%;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
+
+  @include laptop {
+    padding: 2rem;
+  }
+
+  @include mobile {
+    border-radius: 0;
+    gap: 1rem;
+  }
+}
+
+.edit {
+  @include mobile {
+    padding: 2.4rem;
+  }
 }
 
 .heading-container {
@@ -21,9 +36,18 @@
     font-size: 2.4rem;
     color: $text-color;
     letter-spacing: 1px;
+    @include mobile {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
   }
   .edit-btn {
     padding: 0.75rem 2rem !important;
+
+    @include mobile {
+      font-size: 1.6rem;
+      padding: 0.5rem 1rem !important;
+    }
   }
 }
 
@@ -37,14 +61,23 @@
     display: flex;
     align-items: center;
     width: 100%;
+    gap: 2rem;
+
+    @include mobile {
+      gap: 1.5rem;
+    }
 
     p {
       font-size: 1.8rem;
       color: $text-color;
+
+      @include mobile {
+        font-size: 1.6rem;
+      }
     }
 
     p:nth-child(1) {
-      width: 20%;
+      width: 25%;
       font-weight: 600;
     }
   }
@@ -59,14 +92,32 @@
     column-gap: 10%;
     width: 100%;
     flex-wrap: wrap;
+
+    @include laptop {
+      column-gap: 2%;
+    }
+
+    @include mobile {
+      flex-direction: column;
+    }
+
     div {
       min-width: 45%;
       max-width: 45%;
+
+      @include laptop {
+        min-width: 49%;
+        max-width: 49%;
+      }
+      @include mobile {
+        min-width: 100%;
+        max-width: 100%;
+      }
     }
     .btn-container {
       display: flex;
       align-items: center;
-      gap: 2rem;
+      gap: 1.5rem;
       min-width: 100%;
     }
     .btn-ghost {
