--- a/frontend/src/components/FormComponents/InputComponent/inputComponent.module.scss
+++ b/frontend/src/components/FormComponents/InputComponent/inputComponent.module.scss
@@ -8,6 +8,10 @@
   margin-bottom: 2rem;
   padding-bottom: 2rem;
   color: $text-color;
+  @include mobile {
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+  }
 }
 .input-container label {
   width: fit-content;
@@ -15,6 +19,10 @@
   font-size: 1.8rem;
   font-weight: 600;
   cursor: pointer;
+
+  @include mobile {
+    margin-bottom: 0.5rem;
+  }
 }
 .input-container input {
   width: 100%;
@@ -42,6 +50,10 @@
   min-height: 3px;
   background-color: $primary-color;
   transition: all 0.5s;
+
+  @include mobile {
+    bottom: 1rem;
+  }
 }
 .input-container:focus-within::before {
   width: 100%;
