--- a/frontend/src/common/styles.scss
+++ b/frontend/src/common/styles.scss
@@ -7,11 +7,36 @@ $low-color: #ffc107;
 $optimal-color: #28a745;
 $text-color: #5a5f59;
 
+@mixin laptop {
+  @media only screen and (max-width: 1200px) {
+    @content;
+  }
+}
+
+@mixin ipad {
+  @media only screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin mobile {
+  @media only screen and (max-width: 480px) {
+    @content;
+  }
+}
+
 section {
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 85vh;
+  padding: 2rem 7.4rem;
+  @include laptop {
+    padding: 2rem 5.2rem;
+  }
+
+  @include ipad {
+    padding: 2rem 3rem;
+  }
 }
 
 .btn:not([disabled]),
@@ -45,21 +70,4 @@ section {
 .btn:not([disabled]):focus {
   background-color: $primary-hover-color;
   outline: none;
-}
-
-@mixin laptop {
-  @media only screen and (max-width: 1200px) {
-    @content;
-  }
-}
-
-@mixin ipad {
-  @media only screen and (max-width: 768px) {
-    @content;
-  }
-}
-@mixin mobile {
-  @media only screen and (max-width: 480px) {
-    @content;
-  }
 }
