--- a/frontend/src/components/Modal/modal.module.scss
+++ b/frontend/src/components/Modal/modal.module.scss
@@ -16,7 +16,7 @@
   height: fit-content;
   max-height: 80%;
   border-radius: 10px;
-  opacity: 1 !important;
+  z-index: 6;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -26,6 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 2rem;
 
     p {
       font-size: 2.4rem;
