Mobile responsive design for Edit User Access modal: 27-10-2023

--- a/frontend/src/components/AdminPanel/Users/editmodal.module.scss
+++ b/frontend/src/components/AdminPanel/Users/editmodal.module.scss
@@ -4,6 +4,10 @@
   form {
     div {
       margin-bottom: 0;
+
+      @include mobile {
+        margin-bottom: 2rem;
+      }
     }
     .checkbox-container {
       display: flex;
