--- a/frontend/src/components/Modal/modal.module.scss
+++ b/frontend/src/components/Modal/modal.module.scss
@@ -22,6 +22,35 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
+  @include laptop {
+    min-width: 60%;
+  }
+
+  @include ipad {
+    min-width: 75%;
+  }
+  @include mobile {
+    border-radius: 20px 20px 0px 0px;
+    padding: 4.4rem 3rem 3rem;
+    top: auto;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transform: translate(0, 0);
+  }
+  .mobile-icon {
+    @include mobile {
+      width: 25%;
+      height: 0.6rem;
+      border-radius: 25px;
+      background: #c4c4c4;
+      position: absolute;
+      left: 50%;
+      top: 2.4rem;
+      transform: translateX(-50%);
+    }
+  }
+
   .modal-header {
     display: flex;
     align-items: center;
