--- a/frontend/src/components/TableGrid/tablegrid.module.scss
+++ b/frontend/src/components/TableGrid/tablegrid.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
 
-  @include mobile {
+  @include laptop {
     justify-content: flex-start;
     overflow: scroll;
   }
