Responsive design for AddModal and form validation added: 29-10-2023

--- a/frontend/src/components/AdminPanel/Macros/addmacro.module.scss
+++ b/frontend/src/components/AdminPanel/Macros/addmacro.module.scss
@@ -2,6 +2,8 @@
 
 .overflow-scroll {
   overflow-y: scroll;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 .overflow-scroll::-webkit-scrollbar {
   width: 8px;
