--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -39,3 +39,15 @@
     2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 
     
 */
+
+@import "../src/common/styles.scss";
+
+.topBar {
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: $primary-color;
+}
