--- a/frontend/src/components/MealsContainer/MealCard/mealCard.module.scss
+++ b/frontend/src/components/MealsContainer/MealCard/mealCard.module.scss
@@ -16,7 +16,23 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 90%;
+    width: 85%;
+
+    @include ipad {
+      width: 75%;
+    }
+    @include mobile {
+      width: 65%;
+      flex-direction: column;
+      align-items: flex-start;
+
+      .title {
+        font-weight: 500;
+      }
+      .qty {
+        font-size: 1.4rem;
+      }
+    }
   }
   &:first-child {
     border-top-left-radius: 1.5rem;
