--- a/frontend/src/components/MealsContainer/mealsContainer.module.scss
+++ b/frontend/src/components/MealsContainer/mealsContainer.module.scss
@@ -19,6 +19,11 @@
       font-size: 2.4rem;
       font-weight: 600;
       letter-spacing: 1px;
+
+      @include mobile {
+        font-size: 1.8rem;
+        letter-spacing: normal;
+      }
     }
 
     .top-right {
@@ -38,6 +43,21 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        gap: 0.5rem;
+
+        @include mobile {
+          border-radius: 50%;
+          padding: 0.5rem;
+          background-color: transparent;
+          p {
+            display: none;
+          }
+          svg {
+            color: $primary-color;
+          }
+        }
+      }
+      @include mobile {
         gap: 0.5rem;
       }
     }
