added Add Meal feature: 11-03-2024

--- a/frontend/src/components/MealsContainer/mealsContainer.module.scss
+++ b/frontend/src/components/MealsContainer/mealsContainer.module.scss
@@ -34,6 +34,7 @@
       p {
         font-size: 1.8rem;
         font-weight: 500;
+        background-color: transparent;
       }
 
       .add-btn {
