--- a/frontend/src/components/Modal/modal.module.scss
+++ b/frontend/src/components/Modal/modal.module.scss
@@ -17,7 +17,7 @@
   max-height: 80%;
   border-radius: 10px;
   z-index: 6;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
