--- a/frontend/src/components/HomePage/AddEditModal/addEditModal.module.scss
+++ b/frontend/src/components/HomePage/AddEditModal/addEditModal.module.scss
@@ -46,3 +46,73 @@
   align-items: center;
   justify-content: center;
 }
+
+.padding-0 {
+  padding: 0;
+}
+
+.edit-modal {
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    z-index: 10;
+  }
+  .content {
+    .img {
+      max-height: 25rem;
+      min-height: 25rem;
+      overflow: hidden;
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-color: #000000c6;
+        z-index: 5;
+      }
+      img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 50rem;
+      }
+      p.name {
+        left: 2rem;
+        bottom: 5rem;
+        font-size: 2.4rem;
+        font-weight: 600;
+        letter-spacing: 3px;
+        position: absolute;
+        z-index: 6;
+        background-color: transparent;
+        color: #fff;
+      }
+      p.qty {
+        bottom: 2rem;
+        left: 2rem;
+        font-size: 1.8rem;
+        font-weight: 500;
+        letter-spacing: 1px;
+        position: absolute;
+        z-index: 6;
+        background-color: transparent;
+        color: #fff;
+      }
+    }
+  }
+}
+.justify-flex-end {
+  justify-content: flex-end !important;
+}
