--- a/frontend/src/components/HomePage/AddEditModal/addEditModal.module.scss
+++ b/frontend/src/components/HomePage/AddEditModal/addEditModal.module.scss
@@ -111,6 +111,49 @@
         color: #fff;
       }
     }
+    .container {
+      padding: 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .macro-input {
+        display: flex;
+        gap: 0.75rem;
+
+        input {
+          padding: 0.5rem 1.5rem;
+          width: 7.5rem;
+          font-size: 1.8rem;
+          font-weight: 500;
+          border-radius: 0.5rem;
+          border: 2px solid $text-color;
+          text-align: center;
+
+          &:focus {
+            outline: 3px solid $primary-hover-color;
+            border: 2px solid $primary-hover-color;
+          }
+        }
+
+        .qty-update-button {
+          background-color: #999;
+          font-size: 1.8rem;
+          font-weight: 500;
+          color: #333 !important;
+          padding: 0.75rem 2rem;
+
+          &:hover {
+            background-color: $primary-hover-color;
+            color: #fff !important;
+          }
+        }
+      }
+      .unit {
+        font-size: 1.8rem;
+        text-transform: lowercase;
+      }
+    }
   }
 }
 .justify-flex-end {
