--- a/frontend/src/components/HomePage/AddEditModal/addEditModal.module.scss
+++ b/frontend/src/components/HomePage/AddEditModal/addEditModal.module.scss
@@ -65,7 +65,7 @@
     z-index: 10;
   }
   .content {
-    .img {
+    & > .img {
       max-height: 25rem;
       min-height: 25rem;
       overflow: hidden;
@@ -114,12 +114,26 @@
     .container {
       padding: 2rem;
       display: flex;
-      align-items: center;
-      justify-content: space-between;
+      flex-direction: column;
+
+      .qty-label {
+        font-size: 1.8rem;
+        font-weight: 500;
+        margin-bottom: 1rem;
+      }
 
       .macro-input {
+        width: 100%;
         display: flex;
-        gap: 0.75rem;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 2rem;
+
+        div {
+          display: flex;
+          align-items: center;
+          gap: 0.75rem;
+        }
 
         input {
           padding: 0.5rem 1.5rem;
@@ -148,11 +162,58 @@
             color: #fff !important;
           }
         }
+        .unit {
+          font-size: 1.8rem;
+          text-transform: lowercase;
+        }
       }
-      .unit {
-        font-size: 1.8rem;
-        text-transform: lowercase;
+      .macro-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        .title {
+          font-size: 1.8rem;
+          font-weight: 500;
+        }
+
+        .macros-breakdown {
+          display: flex;
+          align-items: center;
+          justify-content: space-around;
+
+          .card {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.75rem;
+
+            .macro-title {
+              font-size: 1.5rem;
+            }
+
+            .img {
+              padding: 1rem;
+              background-color: #ccc;
+              border-radius: 5px;
+              img {
+                width: 25px;
+                height: 25px;
+              }
+            }
+
+            .macro-qty {
+              font-size: 1.4rem;
+            }
+          }
+        }
       }
+    }
+    .add-edit-btn {
+      width: 100%;
+      border-radius: 0;
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
   }
 }
