--- a/frontend/src/components/HomePage/AnalyzeComponent/analyzeComtainer.module.scss
+++ b/frontend/src/components/HomePage/AnalyzeComponent/analyzeComtainer.module.scss
@@ -91,8 +91,16 @@
         .range-val {
           width: 0;
           min-height: 0.75rem;
-          background-color: $primary-color;
           border-radius: 25px;
+        }
+        .low {
+          background-color: #ff3333;
+        }
+        .medium {
+          background-color: #ff8f00;
+        }
+        .high {
+          background-color: #22bb33;
         }
       }
     }
