--- a/frontend/src/components/Join/Login/login.module.scss
+++ b/frontend/src/components/Join/Login/login.module.scss
@@ -10,10 +10,27 @@
   @include mobile {
     padding: 1rem;
   }
-}
 
-.form-container form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .forgot-password-cta {
+      cursor: pointer;
+      margin-bottom: 2rem;
+      margin-top: 0;
+      outline: none;
+      border: none;
+      font-size: 14px;
+      font-weight: 500;
+      text-decoration: underline;
+      transition: all 0.3s;
+      &:hover,
+      &:focus,
+      &:active {
+        color: $primary-color;
+      }
+    }
+  }
 }
